2015-03-10  SilverNexus
	* settings.h: Added field to allow for custom log file names/paths.
	* settings.c: Set default log file to fileperuser.log.
	* ErrorLog.c: Drop hardcoded log file name in favor of settings-set one.
	* parseArgs.c: Established command-line argument to set log file name: -f.
	* README: Updated usage guide to include the new flags -f and --log-file
	* TODO: Removed case sensitivity from the future plans (already implemented).

2015-01-31  SilverNexus
	* settings.h: Added Function pointer to allow for case insensitive searching.
	* settings.c: Set default search to case sensitive.
	* parseArgs.c: Added -n and --no-case command-line flags for no case searches.
	* configure.ac: Added check for strncasecmp.
	* search.c: Changed search function to use pointer in settings.
	* README: Updated usage guide to include the new flags -n and --no-case

2015-01-31  SilverNexus
	* settings.c,
	  settings.h: Made initialization and release of settings return no values.

2014-12-04	SilverNexus
	* parseArgs.c: Added the print level message control flags to the help message.

2014-10-01	SilverNexus
	* ErrorLog.c,
	  ErrorLog.h: Make log_event function return void, rather than int.

2014-06-23	SilverNexus
	* main.c: Make default search directory be current directory.

2014-06-12	SilverNexus
	* main.c: Made final message vary for when match are and are not found.

2014-06-11	SilverNexus
	* parseArgs.c: Added support for log message suppression.
	* settings.h: Added setting for log message suppression.
	* settings.c: Default suppression level is below INFO.
	* ErrorLog.c: Check minimum print level before printing log message.

2014-06-11	SilverNexus
	* main.c: Add functionality that times the search.

2014-06-09	SilverNexus
	* settings.h: Add field for length of search string.
	* settings.c: Initialize search string length.
	* parseArgs.c: Calculate length at assignment of search string.
	* search.c: Remove old length calculation in every line searched.
